# fhir-ml-stroke-risk

./: .gitignore  README.md  docker-compose.yaml  heroku.yml
api/: Dockerfile.api  pyproject.toml  requirements.txt
api/src/app/: __init__.py
app/: .env  .env.local  .env.production  .pnp.cjs  Dockerfile  Dockerfile.app  index.html  package.json  pnpm-lock.yaml  server.js
app/src/: App.jsx  App.module.css  Patient.jsx  Patients.jsx
data/: patient1.json  patient1_bmi.json  patient1_glucose.json  patient1_heartdisease.json  patient1_hypertension.json  patient1_smoking.json  patient2.json  patient2_bmi.json  patient2_glucose.json  patient2_heartdisease.json  patient2_hypertension.json  patient2_smoking.json  patient3.json  patient3_bmi.json  patient3_glucose.json  patient3_smoking.json
documentation/: README.md  architecture-diagram.md  research.md  startup-configuration.md  technical-manual.md  technical-user-manual.md  user-manual.md
hapi/: Dockerfile.hapi
model/: Project_AI_Model.ipynb
resources/: stroke_prediction_model_best_rf.joblib
