[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Erik Taheri <etaheri@me.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
joblib = "^1.2.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
